# snap_purify

./: CLAUDE.md  CMakeLists.txt  ImageCanvas.qml  LICENSE  Main.qml  MarkerContextMenu.qml  README.md  Theme.qml  cursorhelper.h  imagemanager.cpp  imagemanager.h  imageprocessor.cpp  imageprocessor.h  imageprovider.h  main.cpp  markermodel.cpp  markermodel.h  previewprovider.h
